fix: center align header text

--- a/src/component/header/header.module.scss
+++ b/src/component/header/header.module.scss
@@ -15,10 +15,11 @@
     }
 
     .header_text {
-        width: auto;
+        width: 100%;
+        text-align: center;
         @media (max-width:767px) {
             width: 150px;
-            text-align: end;    
+            text-align: center;    
         }
         
     }
